--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
 			<artifactId>stripe-java</artifactId>
 			<version>29.5.0</version>
 		</dependency>
+
+		<!-- SendGrid -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.9.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
