--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,9 +23,9 @@ stripe:
   webhook:
     secret: ${STRIPE_WEBHOOK_SECRET}
 
-sendgrid:
+brevo:
   api:
-    key: ${SENDGRID_API_KEY}
+    key: ${BREVO_API_KEY}
 app:
   domain: https://incalabria.net
 
