Updated yml again

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,22 @@
+server:
+  port: ${PORT:8080}
+
 spring:
   application:
     name: stripe-checkout
+
   datasource:
-    url: jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:5432/postgres?sslmode=require&connect_timeout=30
+    url: jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:5432/postgres?sslmode=require&connectTimeout=30
     username: postgres.cadqqprndmbbwowcgnhm
     password: ${SPRING_DATASOURCE_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: 5 #30 su Render e 40 ( 30 + 10 ) su Supabase
+      maximum-pool-size: 5
+      minimum-idle: 0
       connection-timeout: 30000
       idle-timeout: 600000
       max-lifetime: 1800000
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -26,6 +32,7 @@ stripe:
 brevo:
   api:
     key: ${BREVO_API_KEY}
+
 app:
   domain: https://incalabria.net
 
